--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,12 +1,14 @@
 <!-- Partial html for fragment sankey view -->
-<dl class="dl-horizontal">
-    <dt>Scenario</dt>
-    <dd>
-        <select ng-model="scenario" ng-options="s.name for s in scenarios"
-                ng-change="onScenarioChange()">
-        </select>
-    <dt>Fragment</dt>
-    <dd>
+<div class="row">
+    <div class="col-md-10">
+        <dl class="dl-horizontal">
+            <dt>Scenario</dt>
+            <dd>
+                <select ng-model="scenario" ng-options="s.name for s in scenarios"
+                        ng-change="onScenarioChange()">
+                </select>
+            <dt>Fragment</dt>
+            <dd>
         <span ng-repeat="navFrag in navigationService.getAll()">
             <ng-switch on="$last">
                 <span ng-switch-when="true">{{navFrag.name}}</span>
@@ -14,21 +16,24 @@
              ></span>
             </ng-switch>
         </span>
-    </dd>
-    <dt>Activity Level</dt>
-    <dd>{{fragment.activityLevel | numFormat }} </dd>
-        <dt>Flow Property Type </dt>
-    <dd>
-        <select id="flow-prop-select" ng-model="selectedFlowProperty" ng-options="fp.name for fp in flowProperties"
-                ng-change="onFlowPropertyChange()">
-        </select>
-    </dd>
-        <dt>Reference Unit</dt>
-        <dd id="refUnitName">{{selectedFlowProperty.referenceUnit}}</dd>
-</dl>
-<div class="row">
-    <button class="btn btn-sm pull-right"
-            ng-click="viewFragmentFlowParam()">Flow Details...</button>
+            </dd>
+
+            <dt>Activity Level</dt>
+            <dd>{{fragment.activityLevel | numFormat }}</dd>
+            <dt>Flow Property Type</dt>
+            <dd>
+                <select id="flow-prop-select" ng-model="selectedFlowProperty"
+                        ng-options="fp.name for fp in flowProperties"
+                        ng-change="onFlowPropertyChange()">
+                </select>
+            </dd>
+            <dt>Reference Unit</dt>
+            <dd id="refUnitName">{{selectedFlowProperty.referenceUnit}}</dd>
+        </dl>
+    </div>
+    <div class="col-md-2">
+        <button type="button" class="btn btn-link">Fragment LCIA</button>
+    </div>
 </div>
 <div class="row">
     <div class="col-md-8">
