Vis: Simplify UI router states, start work on #150

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,6 +1,6 @@
 <!-- Partial html for fragment sankey view -->
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-9">
         <dl class="dl-horizontal">
             <dt>Scenario</dt>
             <dd>
@@ -31,8 +31,8 @@
             <dd id="refUnitName">{{selectedFlowProperty.referenceUnit}}</dd>
         </dl>
     </div>
-    <div class="col-md-2">
-        <button type="button" class="btn btn-link">Fragment LCIA</button>
+    <div class="col-md-3">
+        <button type="button" class="btn btn-link pull-right">Display LCIA Results</button>
     </div>
 </div>
 <div class="row">
