--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
                 <li ui-sref-active="active"><a ui-sref="process-lcia">Process LCIA</a></li>
-                <li ui-sref-active="active"><a ui-sref="fragment-flows">Fragment Flows</a></li>
+                <li ui-sref-active="active"><a ui-sref="fragment-sankey">Fragment Flows</a></li>
             </ul>
         </div>
     </nav>
