--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -32,7 +32,10 @@
         </dl>
     </div>
     <div class="col-md-3">
-        <button type="button" class="btn btn-link pull-right">Display LCIA Results</button>
+        <button type="button" class="btn btn-link pull-right"
+                ui-sref="fragment-sankey.fragment-lcia({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
+            Display LCIA Results
+        </button>
     </div>
 </div>
 <div class="row">
