Vis: Fragment LCIA fragment navigation (#150)

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -28,33 +28,49 @@
         </button>
     </div>
 </div>
-<div ng-if="navigationService" class="row">
-    <div class="col-md-9">
-        <h4>Fragment LCIA</h4>
+<div ng-if="navigationService">
+    <div class="row">
+        <div class="col-md-9">
+            <h4>Fragment LCIA</h4>
+        </div>
+        <div class="col-md-3">
+            <button type="button" class="btn btn-link pull-right"
+                    ui-sref="^">
+                Back to Sankey Diagram
+            </button>
+        </div>
+    </div>
         <dl class="dl-horizontal">
             <dt>Scenario</dt>
             <dd>{{navigationScenario.name}}</dd>
             <dt>Fragment</dt>
             <dd>
-        <span ng-repeat="navFrag in navigationService.getAll()">
-            <ng-switch on="$last">
-                <span ng-switch-when="true">{{navFrag.name}}</span>
-                <span ng-switch-default><a class="fragment-link" ng-click="onParentFragmentSelected(navFrag,$index)">{{navFrag.name}}</a>
-             ></span>
-            </ng-switch>
-        </span>
+                <span ng-repeat="navFrag in navigationService.getAll()">
+                    <ng-switch on="$last">
+                        <span ng-switch-when="true">{{navFrag.name}}</span>
+                        <span ng-switch-default><a class="fragment-link"
+                                                   ng-click="onParentFragmentSelected(navFrag,$index)">{{navFrag.name}}</a>
+                     ></span>
+                    </ng-switch>
+                </span>
             </dd>
-
+            <dt>Sub-fragments</dt>
+            <dd ng-if="!navigationSelection.options.length">
+            </dd>
+            <dd ng-if="navigationSelection.options.length > 0">
+               <span isteven-multi-select
+                     button-label="name"
+                     item-label="name"
+                     input-model="navigationSelection.options"
+                     output-model="navigationSelection.model"
+                     tick-property="selected"
+                     selection-mode="single"
+                     on-item-click="onFragmentNavigation()">
+                </span>
+            </dd>
             <dt>Activity Level</dt>
             <dd>{{fragment.activityLevel | numFormat }}</dd>
         </dl>
-    </div>
-    <div class="col-md-3">
-        <button type="button" class="btn btn-link pull-right"
-                ui-sref="^">
-            Back to Sankey Diagram
-        </button>
-    </div>
 </div>
 <div class="row" ng-if="scenarios.length">
     <div ng-repeat="method in methods" class="col-md-6">
