Vis: Help page placeholder (#163)

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,9 @@
                 <li ui-sref-active="active"><a ui-sref="process-lcia">Process LCIA</a></li>
                 <li ui-sref-active="active"><a ui-sref="fragment-sankey">Fragment Flows</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="help.html">Help</a></li>
+            </ul>
         </div>
     </nav>
     <alert ng-show="alert" type="{{alert.type}}">{{alert.msg}}</alert>
