Vis: Fragment LCIA: auto-select first scenario, remove Display button, reset fragment navigation state

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -21,12 +21,12 @@
           tick-property="selected">
     </span>
     </div>
-    <div class="float-block">
-        <button type="button" class="btn btn-primary btn-sm" ng-click="selectionConfirmed()"
-                ng-disabled="!scenarioSelection.model.length">
-            Display Results
-        </button>
-    </div>
+    <!--<div class="float-block">-->
+        <!--<button type="button" class="btn btn-primary btn-sm" ng-click="selectionConfirmed()"-->
+                <!--ng-disabled="!scenarioSelection.model || scenarioSelection.model.length < 1">-->
+            <!--Display Results-->
+        <!--</button>-->
+    <!--</div>-->
 </div>
 <div ng-if="navigationService">
     <div class="row">
