Vis: Clone Scenario option (#184)

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -27,6 +27,9 @@
                 </a>
             </td>
             <td>
+                <button type="button" class="btn btn-default btn-sm" title="Clone" ng-click="cloneScenario(scenario)">
+                    <span class="glyphicon glyphicon-duplicate" aria-hidden="true"  ></span>
+                </button>
                 <button type="button" class="btn btn-default btn-sm" title="Delete" ng-click="deleteScenario(scenario)"
                         ng-hide="hideDelete(scenario)" >
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"  ></span>
