--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <script src="process-flow-param/process-flow-param.js"></script>
     <script src="process-instance/process-instance.js"></script>
     <script src="process-lcia/process-lcia.js"></script>
+    <script src="scenario/scenario-clone.js"></script>
     <script src="scenario/scenario-detail.js"></script>
     <script src="scenario/scenario-edit.js"></script>
     <script src="components/version/version.js"></script>
