--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="components/fragment-navigation/fragment-navigation-service.js"></script>
     <script src="components/lcia-detail/lcia-bar-directive.js"></script>
     <script src="components/lcia-detail/lcia-detail-service.js"></script>
+    <script src="components/modal/modal-confirm.js"></script>
     <script src="components/models/param-model-service.js"></script>
     <script src="components/models/scenario-model-service.js"></script>
     <script src="components/name/name-service.js"></script>
