Vis: Fragment Sankey: change hover behavior WIP (#178)

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -39,14 +39,12 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-8">
         <div class="sankey-container">
             <!--suppress HtmlUnknownTag -->
             <sankey-diagram graph="graph" color="color" selected-node="selectedNode"
                             mouse-over-node="mouseOverNode"></sankey-diagram>
         </div>
-    </div>
-    <div class="col-md-4">
+    <div class="row">
         <div class="flow-container" ng-show="mouseOverNode">
             <label>Input Flows</label>
             <table class="table">
