Vis: Get auth token from URL parameter (#201)

--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -80,7 +80,7 @@
                     <span aria-hidden="true">×</span>
                 </button>
                 <dt>
-                    <a ui-sref="lcia-method({lciaMethodID: method.lciaMethodID})">
+                    <a ui-sref="home.lcia-method({lciaMethodID: method.lciaMethodID})">
                         {{method.getShortName()}}
                     </a>
                 </dt>
