--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -33,7 +33,7 @@
     </div>
     <div class="col-md-3">
         <button type="button" class="btn btn-link pull-right"
-                ui-sref="fragment-sankey.fragment-lcia({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
+                ui-sref=".fragment-lcia({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
             Display LCIA Results
         </button>
     </div>
