--- a/app/index.html
+++ b/app/index.html
@@ -86,12 +86,12 @@
                 <a class="navbar-brand" ui-sref="home">Used Oil LCA</a>
             </div>
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="fragment-lcia">Fragment LCIA</a></li>
-                <li ui-sref-active="active"><a ui-sref="process-lcia">Process LCIA</a></li>
-                <li ui-sref-active="active"><a ui-sref="fragment-sankey">Fragment Flows</a></li>
+                <li ui-sref-active="active"><a ui-sref="home.fragment-lcia">Fragment LCIA</a></li>
+                <li ui-sref-active="active"><a ui-sref="home.process-lcia">Process LCIA</a></li>
+                <li ui-sref-active="active"><a ui-sref="home.fragment-sankey">Fragment Flows</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="help.html">Help</a></li>
+                <li><a href="help.html" target="_blank">Help</a></li>
             </ul>
         </div>
     </nav>
