--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -9,7 +9,7 @@
             <dt>Name</dt>
             <dd>{{scenario["name"]}}</dd>
             <dt>Top Level Fragment</dt>
-            <dd><a ui-sref="fragment-sankey({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
+            <dd><a ui-sref="home.fragment-sankey({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
                 {{fragment.name}}
             </a>
             </dd>
