Vis: Fragment Sankey: Add "Background" to node tool-tip when fragment flow background is true

--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -39,13 +39,16 @@
     </div>
 </div>
 <div class="row">
+<div class="col-md-12">
     <div class="sankey-container">
         <!--suppress HtmlUnknownTag -->
         <sankey-diagram graph="graph" color="color" selected-node="selectedNode"
                         mouse-over-node="mouseOverNode"></sankey-diagram>
     </div>
 </div>
+</div>
 <div class="row">
+<div class="col-md-12">
     <div class="flow-container" ng-show="graph">
         <label>Fragment Flows</label>
         <table class="table">
@@ -67,6 +70,7 @@
             </tbody>
         </table>
     </div>
+</div>
 </div>
 
 
