Vis: Process LCIA Flow Details: add activity level, LCIA Factor and result (#194)

--- a/app/process-flow-param/process-flow-param.html
+++ b/app/process-flow-param/process-flow-param.html
@@ -4,8 +4,8 @@
     <dl class="dl-horizontal">
         <dt>Scenario</dt>
         <dd>{{scenario.name}}</dd>
-        <!--<dt>Activity Level</dt>-->
-        <!--<dd>{{activityLevel | numFormat}}</dd>-->
+        <dt>Activity Level</dt>
+        <dd>{{activityLevel | numFormat}}</dd>
         <dt>Process</dt>
         <dd>{{process.name}}</dd>
         <dt>LCIA Method</dt>
