Vis: Add btn-default class where missing (#205)

--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">
             <span class="panel-title">Scenario Attributes</span>
-            <button class="btn btn-sm pull-right" ng-click="editScenario()" ng-hide="hideEdit(scenario)">Edit</button>
+            <button class="btn btn-default btn-sm pull-right" ng-click="editScenario()" ng-hide="hideEdit(scenario)">Edit</button>
             <div class="clearfix"></div>
         </div>
     <div class="panel-body">
