--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,8 +1,8 @@
 <!-- Partial html for home page -->
 <div class="panel panel-default">
     <div class="panel-heading">
-        <span>Scenarios</span>
-        <button class="btn btn-link pull-right" ng-show="canCreate" ng-click="createScenario()">New</button>
+        <span class="panel-title">Scenarios</span>
+        <button class="btn btn-default btn-sm pull-right" ng-show="canCreate" ng-click="createScenario()">New</button>
         <div class="clearfix"></div>
     </div>
     <table class="table table-condensed">
@@ -42,7 +42,9 @@
 
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading">LCIA Methods</div>
+    <div class="panel-heading">
+        <span class="panel-title">LCIA Methods</span>
+    </div>
     <table class="table table-condensed">
         <thead>
         <tr>
