--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -58,8 +58,8 @@
                         <div class="lcia-bar-container">
                             <lcia-bar-chart lcia="lciaResults[method.lciaMethodID].detail"
                                             flows="elementaryFlows"></lcia-bar-chart>
-                            <button class="btn btn-sm pull-right" ng-show="lciaResults[method.lciaMethodID].detail"
-                                    ng-click="viewProcessFlowParam(method.lciaMethodID)">More Details...
+                            <button class="btn btn-default btn-sm pull-right" ng-show="lciaResults[method.lciaMethodID].detail"
+                                    ng-click="viewProcessFlowParam(method.lciaMethodID)">Flow Details
                             </button>
 
                         </div>
