Vis: Links to XML files (#196)

--- a/app/lcia-method/lcia-method-detail.html
+++ b/app/lcia-method/lcia-method-detail.html
@@ -30,6 +30,8 @@
             <dd>{{lciaMethod["useAdvice"]}}</dd>
             <dt>Reference Quantity</dt>
             <dd>{{lciaMethod["referenceFlowProperty"]["name"]}}</dd>
+            <dt>ILCD Reference</dt>
+            <dd><reference-link resource="lciaMethod">LCIA Method Data Set</reference-link></dd>
         </dl>
     </accordion-group>
 </accordion>
