--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -17,7 +17,9 @@
     <dt>Activity Level</dt>
     <dd>{{activityLevel | numFormat}}</dd>
     <dt>Process</dt>
-    <dd>{{process.name}}</dd>
+    <dd>{{process.name}}
+    <dt>ILCD Reference</dt>
+    <dd><reference-link resource="process">Process Data Set</reference-link></dd>
     <dt>Data Source</dt>
     <dd>{{process.dataSource}}<span ng-if="process.isPrivate"> (private) </span></dd>
 </dl>
