--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -39,6 +39,9 @@
                 </select>
             </dd>
             <p></p>
+            <dt>ILCD Reference</dt>
+            <dd><reference-link resource="selection.process">Process Data Set</reference-link></dd>
+            <p></p>
             <dt>Data Source</dt>
             <dd>{{process.dataSource}}<span ng-if="process.isPrivate"> (private) </span></dd>
         </dl>
