Vis: Use bootstrap style in Help page (#163)

--- a/app/help.html
+++ b/app/help.html
@@ -7,57 +7,94 @@
     <meta name="description" content="Used Oil LCA - Help">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+
 </head>
 <body>
 <div class="container">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Used Oil LCA Help</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#fragment">Fragment</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="row">
+        <div class="col-md-12">
+            <p>
+                Used Oil LCA is an online tool for defining parametric Life Cycle Assessment (LCA) models of motor oil,
+                performing Life Cycle Impact Assessment (LCIA), and visualizing results.
+            </p>
+
+            <h2>
+                <a id="scenario">
+                    Scenario
+                </a>
+            </h2>
+
+            <p>
+                A scenario is an LCA model composed of a top-level <a href="#fragment">fragment</a> and a list of
+                parameters of
+                various types. The LCA Tool contains the following
+                two scenarios which are visible to all users.
+            </p>
+            <ul>
+                <li>Model Base Case</li>
+                <li>Default Scenario</li>
+            </ul>
 
 
-    <h1>
-        Help for the Used Oil LCA Tool
-    </h1>
+            <h3>Parameters</h3>
 
-    <h2>
-        Fragments
-    </h2>
+            <p>Help on parameters</p>
 
-    <p>
-        Define fragments
-    </p>
+            <h2><a id="fragment">
+                Fragment
+            </a>
+            </h2>
 
-    <h2>
-        Scenarios
-    </h2>
+            <p>
+                Define fragments
+            </p>
 
-    <p>
-        Help on scenarios
-    </p>
+            <h3>
+                <a id="fragment-flows">
+                    Fragment Flows
+                </a>
+            </h3>
 
-    <h3>Parameters</h3>
+            <p>Describe Fragment Flows</p>
 
-    <p>Help on parameters</p>
 
-    <h2>LCIA Methods</h2>
+            <h2>
+                <a id="method">
+                    LCIA Methods
+            </a>
+            </h2>
 
-    <p>Help on LCIA Methods</p>
+            <p>Help on LCIA Methods</p>
 
-    <h2>
-        Fragment LCIA
-    </h2>
+            <h2>
+                <a id="fragment-lcia">
+                Fragment LCIA
+                    </a>
+            </h2>
 
-    <p>Help on Fragment LCIA</p>
+            <p>Help on Fragment LCIA</p>
 
-    <h2>
-        Process LCIA
-    </h2>
+            <h2>
+                <a id="process-lcia">
+                Process LCIA
+                    </a>
+            </h2>
 
-    <p>Describe Process LCIA</p>
+            <p>Describe Process LCIA</p>
 
-    <h2>
-        Fragment Flows
-    </h2>
 
-    <p>Describe Fragment Flows</p>
-
+        </div>
+    </div>
 </div>
 </body>
 </html>
