--- a/app/scenario/scenario-edit.html
+++ b/app/scenario/scenario-edit.html
@@ -14,7 +14,7 @@
 
     <div class="form-group">
         <label for="inputAL">Activity Level</label>
-        <input type="number" min="1" class="form-control" id="inputAL" ng-model="scenario.activityLevel" >
+        <input type="number" class="form-control" id="inputAL" ng-model="scenario.activityLevel" >
     </div>
 
     <div class="form-group pull-right" >
